--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "server"
   ],
   "scripts": {
+    "client": "npm run dev --prefix client",
+    "server": "npm run dev --prefix server",
     "dev": "concurrently -n server,client -c green,blue \"npm run dev -w server\" \"npm run dev -w client\"",
     "build": "npm run build -w server && npm run build -w client",
     "start": "npm run start -w server",
@@ -20,14 +22,14 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.22",
-    "concurrently": "^9.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.3.3",
+    "prettier": "^3.7.3",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
