--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "npm run start -w server",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier . --write",
-    "install-all": "cd client && npm i && cd ../server && npm i"
+    "install-all": "cd client && npm i && cd ../server && npm i",
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
@@ -32,7 +33,8 @@
     "prettier": "^3.7.3",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
