--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
-    "types": ["vite/client"],
+    "types": ["vitest", "@testing-library/jest-dom"],
     "skipLibCheck": true
   },
   "include": ["src", "vite-env.d.ts"]
