--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/express": "^5.0.5",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
